Fix navbar darkmode logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ header h1 {
 .nav-links {
     display: flex;
     list-style-type: none;
-    margin-right: 50px;
+    padding-right: 50px;
     
 }
 
